# equiCast-ingestion

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/actions/build-codeartifact/: action.yml
.github/actions/build-dependencies/: action.yml
.github/actions/build-package/: action.yml
.github/actions/calculate-cost/: action.yml
.github/actions/cleanup/: action.yml
.github/actions/configure-aws/: action.yml
.github/actions/install-dependencies/: action.yml
.github/actions/install-package/: action.yml
.github/actions/restore-cache/: action.yml
.github/actions/run-downloader/: action.yml
.github/actions/run-fx/: action.yml
.github/actions/run-splitter/: action.yml
.github/actions/run-uploader/: action.yml
.github/actions/setup-python/: action.yml
.github/workflows/: ingestion.yml  pipeline.yml
equicast_ingestion/: __init__.py  downloader.py  splitter.py  uploader.py
equicast_ingestion/helpers/: __init__.py  downloader.py  splitter.py  uploader.py
equicast_ingestion/processor/: __init__.py  fx.py  stock.py
equicast_ingestion/scripts/: calculate_s3_cost.py  downloader.py  splitter.py  uploader.py
equicast_ingestion/scripts/fx/: fx_calculations.py  fx_forecast.py  fx_fundamentals.py  fx_prices.py  fx_profile.py
scripts/: calculate_s3_cost.py  downloader.py  fx_processor.py  splitter.py  stock_processor.py  uploader.py
tests/: test_downloader.py  test_splitter.py  test_uploader.py
tests/processor/: test_fx.py  test_stock.py
