[build-system]
requires = ["setuptools>=61", "wheel", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[project]
name = "equicast_ingestion"
version = "0.1.1"
description = "Data Ingestion equiCast"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "coldsofttech", email = "coldsoft.mail@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.40.25",
    "botocore>=1.40.25",
    "tqdm>=4.67.1",
    "equicast_pyutils>=0.1.0"
]

classifiers = [
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]