[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "equicast_ingestion"
version = "0.1.6"
description = "Data Ingestion equiCast"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "coldsofttech", email = "coldsoft.mail@gmail.com" }]
requires-python = ">=3.10"
dependencies = []

classifiers = [
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]